--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@material-ui/icons": "^3.0.1",
     "animejs": "^2.2.0",
     "apollo-boost": "^0.1.23",
+    "apollo-client": "^2.5.1",
     "apollo-link-http": "^1.5.9",
     "apollo-link-schema": "^1.1.4",
     "asset-require-hook": "^1.2.0",
