--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "asset-require-hook": "^1.2.0",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.2.1",
     "connect-flash": "^0.1.1",
