--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "apollo-link-schema": "^1.1.4",
     "asset-require-hook": "^1.2.0",
     "axios": "^0.18.0",
-    "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.2.1",
@@ -80,14 +79,17 @@
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "react": "^16.7.0",
+    "react": "^16.8.6",
     "react-apollo": "^2.3.3",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
+    "react-redux": "^7.0.3",
     "react-router-auth": "^1.0.1",
     "react-router-dom": "^4.3.1",
     "reactstrap": "^6.5.0",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.1",
     "serialize-javascript": "^1.6.1",
     "window-or-global": "^1.0.1"
   }
