update for thd month

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,15 @@
 /unit_test/__snapshots__/
 
 /public/bundle.js
+
+
+/Adobe After Effects Auto-Save/
+
+
+/impact.aep
+
+/impact.sketch
+
+/public/
+
+/impact.framerx
