--- a/package.json
+++ b/package.json
@@ -69,24 +69,34 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "framer": "^1.0.8",
+    "global": "^4.4.0",
+    "graphql-iso-date": "^3.6.1",
     "graphql-yoga": "^1.16.9",
     "ignore-loader": "^0.1.2",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-loader": "^2.0.2",
     "jss": "^9.8.7",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.2",
     "node-fetch": "^2.3.0",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "pikaday": "^1.8.0",
+    "pikaday-react-wrapper": "^2.1.6",
     "react": "^16.8.6",
     "react-apollo": "^2.3.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
+    "react-pikaday": "^0.5.1",
     "react-redux": "^7.0.3",
+    "react-router": "^5.0.0",
     "react-router-auth": "^1.0.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "4.3.1",
+    "react-script": "^2.0.5",
+    "react-spring": "^8.0.20",
     "reactstrap": "^6.5.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
