--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "image-webpack-loader": "^4.6.0",
     "jest": "^24.7.1",
     "mini-css-extract-plugin": "^0.4.5",
+    "react-alice-carousel": "^1.15.2",
     "react-test-renderer": "^16.8.6",
     "style-loader": "^0.22.1",
     "supertest": "^4.0.2",
@@ -52,24 +53,27 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
-    "@material-ui/core": "^3.8.1",
+    "@date-io/date-fns": "^1.3.8",
+    "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^3.0.1",
+    "@material-ui/pickers": "^3.2.0",
+    "@material-ui/styles": "^4.2.0",
     "animejs": "^2.2.0",
     "apollo-boost": "^0.1.23",
     "apollo-client": "^2.5.1",
     "apollo-link-http": "^1.5.9",
     "apollo-link-schema": "^1.1.4",
     "asset-require-hook": "^1.2.0",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^4.3.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.0.0-beta.2",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "framer": "^1.0.8",
     "global": "^4.4.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-yoga": "^1.16.9",
@@ -83,24 +87,24 @@
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pikaday": "^1.8.0",
-    "pikaday-react-wrapper": "^2.1.6",
     "react": "^16.8.6",
     "react-apollo": "^2.3.3",
-    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
-    "react-pikaday": "^0.5.1",
+    "react-multi-carousel": "^2.1.1",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.0",
     "react-router-auth": "^1.0.1",
     "react-router-dom": "4.3.1",
     "react-script": "^2.0.5",
+    "react-slick": "^0.24.0",
     "react-spring": "^8.0.20",
-    "reactstrap": "^6.5.0",
+    "react-swipeable-views": "^0.13.3",
+    "react-swipeable-views-utils": "^0.13.3",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "serialize-javascript": "^1.6.1",
+    "slick-carousel": "^1.8.1",
     "window-or-global": "^1.0.1"
   }
 }
