--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.0.0",
     "@babel/polyfill": "^7.4.3",
     "@date-io/date-fns": "^1.3.8",
     "@material-ui/core": "^4.2.1",
@@ -75,6 +76,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "global": "^4.4.0",
+    "graphql": "^14.4.2",
     "graphql-iso-date": "^3.6.1",
     "graphql-yoga": "^1.16.9",
     "ignore-loader": "^0.1.2",
