--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@apollo/react-common": "^3.0.1",
     "@apollo/react-hooks": "^3.0.0",
     "@babel/polyfill": "^7.4.3",
     "@date-io/date-fns": "^1.3.8",
