--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "Mern-Boiler",
+  "name": "Impact",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest --updateSnapshot",
-    "start": "webpack -w & nodemon server.js"
+    "start": "webpack -w & nodemon server.js",
+    "build": "jest --updateSnapshot"
   },
   "babel": {
     "presets": [
