--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --updateSnapshot",
     "start": "webpack -w & nodemon server.js",
-    "build": "jest --updateSnapshot"
+    "build": "echo hello"
   },
   "babel": {
     "presets": [
