--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 .DS_Store?
 /unit_test/__snapshots__/
 /Adobe After Effects Auto-Save/
-/now.json
+now.json
 /impact.aep
 /impact.sketch
 /impact.framerx
