--- a/package.json
+++ b/package.json
@@ -1,120 +1,120 @@
 {
-  "name": "Impact",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "webpack -w & nodemon index.js",
-    "test": "jest --updateSnapshot",
-    "start": "node index.js",
-    "deploy": "curl -X POST https://api.zeit.co/v1/integrations/deploy/QmcJD56Yyk5fEo4SXb6dD5vc8ERPtoDW8c5TxLBoJmx6M1/7m56IyF5fr",
-    "build": "webpack"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ],
-    "plugins": [
-      "@babel/plugin-proposal-object-rest-spread",
-      "@babel/plugin-proposal-class-properties",
-      "@babel/plugin-proposal-export-default-from"
-    ]
-  },
-  "jest": {},
-  "keywords": [],
-  "author": "Charles Jennings",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^24.7.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react-app": "^3.1.1",
-    "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
-    "ignore-file": "^1.1.2",
-    "image-webpack-loader": "^4.6.0",
-    "jest": "^24.7.1",
-    "mini-css-extract-plugin": "^0.4.5",
-    "now": "^16.2.0",
-    "react-alice-carousel": "^1.15.2",
-    "react-test-renderer": "^16.8.6",
-    "style-loader": "^0.22.1",
-    "supertest": "^4.0.2",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.2.0",
-    "webpack-node-externals": "^1.7.2"
-  },
-  "dependencies": {
-    "@apollo/react-common": "^3.0.1",
-    "@apollo/react-hooks": "^3.0.0",
-    "@babel/polyfill": "^7.4.3",
-    "@date-io/date-fns": "^1.3.8",
-    "@material-ui/core": "^4.2.1",
-    "@material-ui/icons": "^3.0.1",
-    "@material-ui/pickers": "^3.2.0",
-    "@material-ui/styles": "^4.2.0",
-    "animejs": "^2.2.0",
-    "apollo-boost": "^0.1.23",
-    "apollo-client": "^2.6.4",
-    "apollo-link-http": "^1.5.9",
-    "apollo-link-schema": "^1.1.4",
-    "asset-require-hook": "^1.2.0",
-    "axios": "^0.19.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "bootstrap": "^4.3.1",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.5",
-    "date-fns": "^2.0.0-beta.2",
-    "eslint-plugin-react-hooks": "^2.0.1",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "final-form": "^4.18.5",
-    "global": "^4.4.0",
-    "graphql": "^14.4.2",
-    "graphql-iso-date": "^3.6.1",
-    "graphql-yoga": "^1.16.9",
-    "ignore-loader": "^0.1.2",
-    "isomorphic-fetch": "^2.2.1",
-    "isomorphic-loader": "^2.0.2",
-    "jss": "^9.8.7",
-    "moment": "^2.24.0",
-    "mongoose": "^5.4.2",
-    "node-fetch": "^2.3.0",
-    "nodemon": "^1.18.9",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "react": "^16.8.6",
-    "react-apollo": "^2.3.3",
-    "react-dom": "^16.8.6",
-    "react-final-form-hooks": "^2.0.1",
-    "react-jss": "^8.6.1",
-    "react-multi-carousel": "^2.1.1",
-    "react-redux": "^7.0.3",
-    "react-router": "^5.0.0",
-    "react-router-auth": "^1.0.1",
-    "react-router-dom": "4.3.1",
-    "react-script": "^2.0.5",
-    "react-slick": "^0.24.0",
-    "react-spring": "^8.0.20",
-    "react-swipeable-views": "^0.13.3",
-    "react-swipeable-views-utils": "^0.13.3",
-    "recompose": "^0.30.0",
-    "redux": "^4.0.1",
-    "serialize-javascript": "^1.6.1",
-    "slick-carousel": "^1.8.1",
-    "window-or-global": "^1.0.1"
-  }
+	"name": "Impact",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "webpack -w & nodemon index.js",
+		"test": "jest --updateSnapshot",
+		"start": "node index.js",
+		"deploy": "now",
+		"build": "webpack"
+	},
+	"babel": {
+		"presets": [
+			"@babel/preset-env",
+			"@babel/preset-react"
+		],
+		"plugins": [
+			"@babel/plugin-proposal-object-rest-spread",
+			"@babel/plugin-proposal-class-properties",
+			"@babel/plugin-proposal-export-default-from"
+		]
+	},
+	"jest": {},
+	"keywords": [],
+	"author": "Charles Jennings",
+	"license": "MIT",
+	"devDependencies": {
+		"@babel/core": "^7.4.3",
+		"@babel/plugin-proposal-class-properties": "^7.4.0",
+		"@babel/plugin-proposal-export-default-from": "^7.2.0",
+		"@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+		"@babel/preset-env": "^7.4.3",
+		"@babel/preset-react": "^7.0.0",
+		"babel-cli": "^6.26.0",
+		"babel-jest": "^24.7.1",
+		"babel-loader": "^8.0.5",
+		"babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-preset-env": "^1.7.0",
+		"babel-preset-react-app": "^3.1.1",
+		"css-loader": "^0.28.11",
+		"extract-text-webpack-plugin": "^3.0.2",
+		"file-loader": "^1.1.11",
+		"ignore-file": "^1.1.2",
+		"image-webpack-loader": "^4.6.0",
+		"jest": "^24.7.1",
+		"mini-css-extract-plugin": "^0.4.5",
+		"now": "^16.2.0",
+		"react-alice-carousel": "^1.15.2",
+		"react-test-renderer": "^16.8.6",
+		"style-loader": "^0.22.1",
+		"supertest": "^4.0.2",
+		"webpack": "^4.28.3",
+		"webpack-cli": "^3.2.0",
+		"webpack-node-externals": "^1.7.2"
+	},
+	"dependencies": {
+		"@apollo/react-common": "^3.0.1",
+		"@apollo/react-hooks": "^3.0.0",
+		"@babel/polyfill": "^7.4.3",
+		"@date-io/date-fns": "^1.3.8",
+		"@material-ui/core": "^4.2.1",
+		"@material-ui/icons": "^3.0.1",
+		"@material-ui/pickers": "^3.2.0",
+		"@material-ui/styles": "^4.2.0",
+		"animejs": "^2.2.0",
+		"apollo-boost": "^0.1.23",
+		"apollo-client": "^2.6.4",
+		"apollo-link-http": "^1.5.9",
+		"apollo-link-schema": "^1.1.4",
+		"asset-require-hook": "^1.2.0",
+		"axios": "^0.19.0",
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.18.3",
+		"bootstrap": "^4.3.1",
+		"connect-flash": "^0.1.1",
+		"cookie-parser": "^1.4.3",
+		"cors": "^2.8.5",
+		"date-fns": "^2.0.0-beta.2",
+		"eslint-plugin-react-hooks": "^2.0.1",
+		"express": "^4.16.4",
+		"express-session": "^1.15.6",
+		"final-form": "^4.18.5",
+		"global": "^4.4.0",
+		"graphql": "^14.4.2",
+		"graphql-iso-date": "^3.6.1",
+		"graphql-yoga": "^1.16.9",
+		"ignore-loader": "^0.1.2",
+		"isomorphic-fetch": "^2.2.1",
+		"isomorphic-loader": "^2.0.2",
+		"jss": "^9.8.7",
+		"moment": "^2.24.0",
+		"mongoose": "^5.4.2",
+		"node-fetch": "^2.3.0",
+		"nodemon": "^1.18.9",
+		"passport": "^0.4.0",
+		"passport-local": "^1.0.0",
+		"react": "^16.8.6",
+		"react-apollo": "^2.3.3",
+		"react-dom": "^16.8.6",
+		"react-final-form-hooks": "^2.0.1",
+		"react-jss": "^8.6.1",
+		"react-multi-carousel": "^2.1.1",
+		"react-redux": "^7.0.3",
+		"react-router": "^5.0.0",
+		"react-router-auth": "^1.0.1",
+		"react-router-dom": "4.3.1",
+		"react-script": "^2.0.5",
+		"react-slick": "^0.24.0",
+		"react-spring": "^8.0.20",
+		"react-swipeable-views": "^0.13.3",
+		"react-swipeable-views-utils": "^0.13.3",
+		"recompose": "^0.30.0",
+		"redux": "^4.0.1",
+		"serialize-javascript": "^1.6.1",
+		"slick-carousel": "^1.8.1",
+		"window-or-global": "^1.0.1"
+	}
 }
