--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,17 @@
 				"source": "**",
 				"function": "impact"
 			}
+		],
+		"headers": [
+			{
+				"source": "**/*.@(jpg|jpeg|gif|png|js)",
+				"headers": [
+					{
+						"key": "Cache-Control",
+						"value": "max-age=7200"
+					}
+				]
+			}
 		]
 	}
 }
