--- a/package.json
+++ b/package.json
@@ -47,8 +47,6 @@
 		"image-webpack-loader": "^4.6.0",
 		"jest": "^24.9.0",
 		"mini-css-extract-plugin": "^0.4.5",
-		"now": "^16.7.3",
-		"react-alice-carousel": "^1.18.0",
 		"react-test-renderer": "^16.13.1",
 		"style-loader": "^0.22.1",
 		"supertest": "^4.0.2",
@@ -57,8 +55,6 @@
 		"webpack-node-externals": "^1.7.2"
 	},
 	"dependencies": {
-		"@apollo/react-common": "^3.1.4",
-		"@apollo/react-hooks": "^3.1.4",
 		"@babel/polyfill": "^7.8.7",
 		"@date-io/date-fns": "^1.3.13",
 		"@icons-pack/react-simple-icons": "^2.6.0",
@@ -68,12 +64,7 @@
 		"@material-ui/styles": "^4.9.6",
 		"@trejgun/material-ui-icons-social-networks": "0.0.4",
 		"animejs": "^2.2.0",
-		"apollo-boost": "^0.1.28",
-		"apollo-client": "^2.6.8",
-		"apollo-link-http": "^1.5.16",
-		"apollo-link-schema": "^1.2.4",
 		"asset-require-hook": "^1.2.0",
-		"axios": "^0.19.2",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"bootstrap": "^4.4.1",
@@ -113,7 +104,7 @@
 		"react-rewards": "^1.1.1",
 		"react-router": "^5.1.2",
 		"react-router-auth": "^1.0.1",
-		"react-router-dom": "4.3.1",
+		"react-router-dom": "^5.1.2",
 		"react-script": "^2.0.5",
 		"react-simple-icons": "^1.0.0-beta.5",
 		"react-swipeable-views": "^0.13.9",
