--- a/firebase.json
+++ b/firebase.json
@@ -14,7 +14,7 @@
 				"headers": [
 					{
 						"key": "Cache-Control",
-						"value": "max-age=7200"
+						"value": "max-age=no-cache"
 					}
 				]
 			}
